--- a/AMES/train_sample.yml
+++ b/AMES/train_sample.yml
@@ -3,7 +3,7 @@
 
 nNodeNeurons: 200 # Number of node neurons for GNN
 nEdgeNeurons: 30 # Number of edge neurons for GNN
-nGraphConvolutionLayers: 2 # Number of graph convolutional layers
+nGraphConvolutionLayers: 0 # Number of graph convolutional layers
 nSharedLayers: 4 # Number of layers in shared core
 nTargetSpecificLayers: 2 # Number of layers in target specific core
 n0: 200 # Number of neurons layer 1 shared core
@@ -25,14 +25,14 @@ prob_h6: 0.1 # Dropout layer 1 target specific core
 momentum_batch_norm: 0.9
 
 # Activation function
-activation: "ReLU"
+ActivationFunction: "ReLU" #"Tanh"
 
-nEpochs: 50 #np.iinfo(np.int32).max
-nBatch: 30
+nEpochs: 30 #np.iinfo(np.int32).max
+nBatch: 32
 nCheckpoint: 10
 randomSeed: 42
-nTrainMaxEntries: 1000
-nValMaxEntries: 200
+#nTrainMaxEntries: 1500
+#nValMaxEntries: 300
 
 # this only gives the starting learning rate iff loadModel = False; otherwise it is read from checkpoint file
 learningRate: 0.0005 #5e-4
@@ -48,7 +48,7 @@ loadOptimizer: False
 
 # warmStart: "GraphPotential-nn-2gcl-2fcl-31102023-173821.tar"
 
-useMolecularDescriptors: False # Use molecular features instead of graphs for comparison to original MTL paper
+useMolecularDescriptors: True # Use molecular features instead of graphs for comparison to original MTL paper
 
 callbacks: 
    earlyStopping:
@@ -63,8 +63,10 @@ callbacks:
 descriptionText: 'No data transformation'
 
 # where the graph data-base resides
+database: '/lustre/home/cib/abiel/GraphDataBase_AMES' #'/Users/abigailteitgen/Dropbox/Postdoc/AMES_GNN_MTL_Network/GraphDataBase_AMES'
 
-database: '/Users/abigailteitgen/Dropbox/Postdoc/AMES_GNN_MTL_Network/GraphDataBase_AMES'
+# file with molecular data
+data_file: '/lustre/home/cib/abiel/AMES/data.csv' #'/Users/abigailteitgen/Dropbox/Postdoc/AMES_GNN_MTL_Network/AMES/data.csv'
 
 # transformData: std
 
