--- a/AMES/train_sample.yml
+++ b/AMES/train_sample.yml
@@ -2,17 +2,17 @@
 # Input file for model training
 
 nGraphConvolutionLayers: 2 # Number of graph convolutional layers
-nNodeNeurons: 78 # Number of node neurons for GNN
-nEdgeNeurons: 107 # Number of edge neurons for GNN
+nNodeNeurons: 278 # Number of node neurons for GNN
+nEdgeNeurons: 300 # Number of edge neurons for GNN
 dropoutGNN: 0.0366 # Dropout in graph convolutional layers
 momentumBatchNormGNN: 0.0776 # Batch normalization in graph convolutional layers
 
-nSharedLayers: 4 # Number of layers in shared core
-nTargetSpecificLayers: 2 # Number of layers in target specific core
-nShared: [200, 100, 50, 10] # Number of neurons in shared core
-nTarget: [50, 10] # Number of neurons in target specific core
-dropoutShared: [0.4221, 0.1147, 0.5, 0.5] # Dropout in shared core
-dropoutTarget: [0.3156, 0.5] # Dropout in target specific core
+nSharedLayers: 2 # Number of layers in shared core
+nTargetSpecificLayers: 1 # Number of layers in target specific core
+nShared: [271, 87] # Number of neurons in shared core
+nTarget: [107] # Number of neurons in target specific core
+dropoutShared: [0.4221, 0.1147] # Dropout in shared core
+dropoutTarget: [0.3156] # Dropout in target specific core
 momentumBatchNormShared: 0.0776 # Batch normalization in shared core
 momentumBatchNormTarget: 0.0776 # Batch normalization in target specific core
 
@@ -30,8 +30,8 @@ nEpochs: 1 #np.iinfo(np.int32). # Number of epochs
 nBatch: 32 # Batch size
 nCheckpoint: 10 # Checkpoint frequency
 randomSeed: 42 # Random seed
-#nTrainMaxEntries: 1500 # Number of training samples to use
-#nValMaxEntries: 300 # Number of validation examples to  use
+nTrainMaxEntries: 1500 # Number of training samples to use
+nValMaxEntries: 300 # Number of validation examples to  use
 
 learningRate: 0.0011 #0.0000924993113995373 #0.0001 #5e-4
 
