--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,8 @@ AMES/predictions_TF.csv
 AMES/predictions_Torch.csv
 AMES/loss/
 AMES/optuna/
+AMES/output_crossfold_val/
+*.pt
 *.csv
 *.zip
 *.pyc
