--- a/AMES/train_sample.yml
+++ b/AMES/train_sample.yml
@@ -1,26 +1,26 @@
 
 # Input file for model training
 
-nGraphConvolutionLayers: 2 # Number of graph convolutional layers
+nGraphConvolutionLayers: 3 # Number of graph convolutional layers
 nNodeNeurons: 78 # Number of node neurons for GNN
-nEdgeNeurons: 107 # Number of edge neurons for GNN
-dropoutGNN: 0.001 # Dropout in graph convolutional layers
-momentumBatchNorm: 0.1 # Batch normalization in graph convolutional layers
+nEdgeNeurons: 109 # Number of edge neurons for GNN
+dropoutGNN: 0.0176 # Dropout in graph convolutional layers
+momentumBatchNorm: 0.6003 # Batch normalization in graph convolutional layers
 
 nSharedLayers: 2  # Number of layers in shared core
 nTargetSpecificLayers: 2 # Number of layers in target specific core
-nShared: [100, 50] # Number of neurons in shared core
-nTarget: [50, 10] # Number of neurons in target specific core
-dropoutShared: [0.25, 0.15] # Dropout in shared core
-dropoutTarget: [0.15, 0.15]
+nShared: [167, 108] # Number of neurons in shared core
+nTarget: [96, 104] # Number of neurons in target specific core
+dropoutShared: [0.074, 0.240] # Dropout in shared core
+dropoutTarget: [0.463, 0.065]
  # Dropout in target specific core
 
 # Weights for weighted cost function
-w1: 1.90
-w2: 1.56
-w3: 3.31
-w4: 5.09
-w5: 5.11
+w1: 5.88
+w2: 5.67
+w3: 1.57
+w4: 1.02
+w5: 2.16
 
 # Activation function
 ActivationFunction: "Tanh" #"Tanh"
@@ -28,11 +28,11 @@ ActivationFunction: "Tanh" #"Tanh"
 nEpochs: 1 #np.iinfo(np.int32). # Number of epochs
 nBatch: 32 # Ba15h size
 nCheckpoint: 1 # Checkpoint frequency
-randomSeed: 15 # Random seed
+randomSeed: 90 # Random seed
 #nTrainMaxEntries: 1500 # Number of training samples to use
 #nValMaxEntries: 300 # Number of validation examples to  use
 
-learningRate: 0.0000925 #0.0000924993113995373 #0.0001 #5e-4
+learningRate: 0.00027 #0.0000924993113995373 #0.0001 #5e-4
 
 weightedCostFunction: True # Include weighted cost function
 L2Regularization: 0.005 # L2 regularization coefficient
@@ -62,7 +62,7 @@ callbacks:
 descriptionText: 'No data transformation'
 
 # where the graph data-base resides
-database: '/Users/abigailteitgen/Dropbox/Postdoc/AMES_GNN_MTL_Network/GraphDataBase_AMES_global'
+database: '/Volumes/Seagate/Postdoc/AMES_GNN_MTL_Network/GraphDataBase_AMES'
 
 # file with molecular data
 data_file: '/Users/abigailteitgen/Dropbox/Postdoc/AMES_GNN_MTL_Network/AMES/data.csv'
